@@ -6,68 +6,54 @@ import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Repository;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
+@ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "jcf", matchIfMissing = true)
 @Repository
-@ConditionalOnProperty(
-        name = "discodeit.repository.type",
-        havingValue = "jcf",
-        matchIfMissing = true
-)
 public class JCFReadStatusRepository implements ReadStatusRepository {
-    private final Map<UUID, ReadStatus> data = new HashMap<>();
+    private final Map<UUID, ReadStatus> data;
+
+    public JCFReadStatusRepository() {
+        this.data = new HashMap<>();
+    }
 
     @Override
     public ReadStatus save(ReadStatus readStatus) {
-        data.put(readStatus.getId(), readStatus);
+        this.data.put(readStatus.getId(), readStatus);
         return readStatus;
     }
 
     @Override
-    public ReadStatus findById(UUID id) {
-        return data.get(id);
+    public Optional<ReadStatus> findById(UUID id) {
+        return Optional.ofNullable(this.data.get(id));
     }
 
     @Override
-    public List<ReadStatus> findAll() {
-        return new ArrayList<>(data.values());
-    }
-
-    @Override
-    public void delete(UUID id) {
-        data.remove(id);
-    }
-
-    @Override
-    public List<ReadStatus> findByChannelId(UUID channelId) {
-        return data.values().stream()
-                .filter(readStatus -> readStatus.getChannelId().equals(channelId))
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public int deleteByChannelId(UUID channelId) {
-        List<ReadStatus> readStatuses = findByChannelId(channelId);
-        for (ReadStatus readStatus : readStatuses) {
-            data.remove(readStatus.getId());
-        }
-        return readStatuses.size();
-    }
-
-    @Override
-    public List<ReadStatus> findByUserId(UUID userId) {
-        return data.values().stream()
+    public List<ReadStatus> findAllByUserId(UUID userId) {
+        return this.data.values().stream()
                 .filter(readStatus -> readStatus.getUserId().equals(userId))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public ReadStatus findByUserIdAndChannelId(UUID userId, UUID channelId) {
-        return data.values().stream()
-                .filter(readStatus ->
-                        readStatus.getUserId().equals(userId) &&
-                                readStatus.getChannelId().equals(channelId))
-                .findFirst()
-                .orElse(null);
+    public List<ReadStatus> findAllByChannelId(UUID channelId) {
+        return this.data.values().stream()
+                .filter(readStatus -> readStatus.getChannelId().equals(channelId))
+                .toList();
+    }
+
+    @Override
+    public boolean existsById(UUID id) {
+        return this.data.containsKey(id);
+    }
+
+    @Override
+    public void deleteById(UUID id) {
+        this.data.remove(id);
+    }
+
+    @Override
+    public void deleteAllByChannelId(UUID channelId) {
+        this.findAllByChannelId(channelId)
+                .forEach(readStatus -> this.deleteById(readStatus.getId()));
     }
 }
