@@ -1,152 +1,122 @@
 package com.sprint.mission.discodeit.service.basic;
 
-import com.sprint.mission.discodeit.dto.request.ChannelUpdateRequest;
+import com.sprint.mission.discodeit.dto.data.ChannelDto;
 import com.sprint.mission.discodeit.dto.request.PrivateChannelCreateRequest;
 import com.sprint.mission.discodeit.dto.request.PublicChannelCreateRequest;
-import com.sprint.mission.discodeit.dto.response.ChannelResponse;
+import com.sprint.mission.discodeit.dto.request.PublicChannelUpdateRequest;
 import com.sprint.mission.discodeit.entity.Channel;
 import com.sprint.mission.discodeit.entity.ChannelType;
+import com.sprint.mission.discodeit.entity.Message;
 import com.sprint.mission.discodeit.entity.ReadStatus;
 import com.sprint.mission.discodeit.repository.ChannelRepository;
 import com.sprint.mission.discodeit.repository.MessageRepository;
 import com.sprint.mission.discodeit.repository.ReadStatusRepository;
 import com.sprint.mission.discodeit.service.ChannelService;
-import org.springframework.stereotype.Service;
 import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Service;
 
 import java.time.Instant;
-import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.*;
 
-@Service
 @RequiredArgsConstructor
+@Service
 public class BasicChannelService implements ChannelService {
     private final ChannelRepository channelRepository;
+    //
     private final ReadStatusRepository readStatusRepository;
     private final MessageRepository messageRepository;
 
-//    public BasicChannelService(ChannelRepository channelRepository) {
-//        this.channelRepository = channelRepository;
-//    }
-
     @Override
-    public ChannelResponse createPublicChannel(PublicChannelCreateRequest request) {
-        //public 채널 생성
-        Channel channel = new Channel(
-                request.getChannelName(),
-                request.getDescription()
-        );
+    public Channel create(PublicChannelCreateRequest request) {
+        String name = request.name();
+        String description = request.description();
+        Channel channel = new Channel(ChannelType.PUBLIC, name, description);
 
-        //저장
-        channelRepository.save(channel);
-
-        //response 반환
-        return new ChannelResponse(channel, null);
+        return channelRepository.save(channel);
     }
 
     @Override
-    public ChannelResponse createPrivateChannel(PrivateChannelCreateRequest request) {
-        //private 채널 생성
-        Channel channel = new Channel(ChannelType.PRIVATE);
+    public Channel create(PrivateChannelCreateRequest request) {
+        Channel channel = new Channel(ChannelType.PRIVATE, null, null);
+        Channel createdChannel = channelRepository.save(channel);
 
-        //저장
-        channelRepository.save(channel);
+        request.participantIds().stream()
+                .map(userId -> new ReadStatus(userId, createdChannel.getId(), Instant.MIN))
+                .forEach(readStatusRepository::save);
 
-        //참여 user별 readstatus생성
-        for (UUID userId : request.getUserIds()) {
-            ReadStatus readStatus = new ReadStatus(userId, channel.getId());
-            readStatusRepository.save(readStatus);
-        }
-
-        //response 반환
-        return new ChannelResponse(channel, null, request.getUserIds());
+        return createdChannel;
     }
 
     @Override
-    public ChannelResponse findById(UUID id) {
-        Channel channel = channelRepository.findById(id);
-        if (channel == null) {
-            return null;
-        }
-
-        //최근 메시지 시간 조회
-        Instant lastMessageAt = messageRepository.findLastMessageTimeByChannelId(id);
-
-        // public 채널
-        if (channel.getType() == ChannelType.PUBLIC) {
-            return new ChannelResponse(channel, lastMessageAt);
-        }
-
-        // private 채널 - 참여 사용자 id 목록 조회
-        List<UUID> participantUserIds = readStatusRepository.findByChannelId(id)
-                .stream()
-                .map(ReadStatus::getUserId)
-                .collect(Collectors.toList());
-
-        return new ChannelResponse(channel, lastMessageAt, participantUserIds);
+    public ChannelDto find(UUID channelId) {
+        return channelRepository.findById(channelId)
+                .map(this::toDto)
+                .orElseThrow(() -> new NoSuchElementException("Channel with id " + channelId + " not found"));
     }
 
     @Override
-    public List<ChannelResponse> findAllByUserId(UUID userId) {
-        List<Channel> allChannels = channelRepository.findAll();
-
-        //사용자의 readstatus 목록
-        List<UUID> userChannelIds = readStatusRepository.findByUserId(userId)
-                .stream()
+    public List<ChannelDto> findAllByUserId(UUID userId) {
+        List<UUID> mySubscribedChannelIds = readStatusRepository.findAllByUserId(userId).stream()
                 .map(ReadStatus::getChannelId)
-                .collect(Collectors.toList());
+                .toList();
 
-        return allChannels.stream()
-                .filter(channel -> {
-                    if (channel.getType() == ChannelType.PUBLIC) {
-                        return true;
-                    }
-                    return userChannelIds.contains(channel.getId());
-                })
-                .map(channel -> {
-                    Instant lastMessageAt = messageRepository.findLastMessageTimeByChannelId(channel.getId());
-
-                    if (channel.getType() == ChannelType.PUBLIC) {
-                        return new ChannelResponse(channel, lastMessageAt);
-                    }
-
-                    List<UUID> participantUserIds = readStatusRepository.findByChannelId(channel.getId())
-                            .stream()
-                            .map(ReadStatus::getUserId)
-                            .collect(Collectors.toList());
-
-                    return new ChannelResponse(channel, lastMessageAt, participantUserIds);
-                })
-                .collect(Collectors.toList());
+        return channelRepository.findAll().stream()
+                .filter(channel ->
+                        channel.getType().equals(ChannelType.PUBLIC)
+                                || mySubscribedChannelIds.contains(channel.getId())
+                )
+                .map(this::toDto)
+                .toList();
     }
 
     @Override
-    public ChannelResponse update(ChannelUpdateRequest request) {
-        Channel channel = channelRepository.findById(request.getChannelId());
-        if (channel == null) {
-            return null;
+    public Channel update(UUID channelId, PublicChannelUpdateRequest request) {
+        String newName = request.newName();
+        String newDescription = request.newDescription();
+        Channel channel = channelRepository.findById(channelId)
+                .orElseThrow(() -> new NoSuchElementException("Channel with id " + channelId + " not found"));
+        if (channel.getType().equals(ChannelType.PRIVATE)) {
+            throw new IllegalArgumentException("Private channel cannot be updated");
         }
-
-        channel.update(request.getChannelName(), request.getDescription());
-
-        channelRepository.save(channel);
-
-        Instant lastMessageAt = messageRepository.findLastMessageTimeByChannelId(channel.getId());
-        return new ChannelResponse(channel, lastMessageAt);
+        channel.update(newName, newDescription);
+        return channelRepository.save(channel);
     }
 
     @Override
-    public void delete(UUID id) {
-        Channel channel = channelRepository.findById(id);
-        if (channel == null) {
-            return;
+    public void delete(UUID channelId) {
+        Channel channel = channelRepository.findById(channelId)
+                .orElseThrow(() -> new NoSuchElementException("Channel with id " + channelId + " not found"));
+
+        messageRepository.deleteAllByChannelId(channel.getId());
+        readStatusRepository.deleteAllByChannelId(channel.getId());
+
+        channelRepository.deleteById(channelId);
+    }
+
+    private ChannelDto toDto(Channel channel) {
+        Instant lastMessageAt = messageRepository.findAllByChannelId(channel.getId())
+                .stream()
+                .sorted(Comparator.comparing(Message::getCreatedAt).reversed())
+                .map(Message::getCreatedAt)
+                .limit(1)
+                .findFirst()
+                .orElse(Instant.MIN);
+
+        List<UUID> participantIds = new ArrayList<>();
+        if (channel.getType().equals(ChannelType.PRIVATE)) {
+            readStatusRepository.findAllByChannelId(channel.getId())
+                    .stream()
+                    .map(ReadStatus::getUserId)
+                    .forEach(participantIds::add);
         }
 
-        messageRepository.deleteByChannelId(id);
-
-        readStatusRepository.deleteByChannelId(id);
-
-        channelRepository.delete(id);
+        return new ChannelDto(
+                channel.getId(),
+                channel.getType(),
+                channel.getName(),
+                channel.getDescription(),
+                participantIds,
+                lastMessageAt
+        );
     }
 }
